--- a/index.html
+++ b/index.html
@@ -1,159 +1,183 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Movie Suggestions and Ratings</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script type="module">
+		// Import the functions you need from the SDKs you need
+		import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+		import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-analytics.js";
+		// TODO: Add SDKs for Firebase products that you want to use
+		// https://firebase.google.com/docs/web/setup#available-libraries
+	  
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		const firebaseConfig = {
+		  apiKey: "AIzaSyDncXawcMTUeRGfBlE7knbDUdJWnx8jIFI",
+		  authDomain: "movie-suggestion-ff465.firebaseapp.com",
+		  databaseURL: "https://movie-suggestion-ff465-default-rtdb.firebaseio.com",
+		  projectId: "movie-suggestion-ff465",
+		  storageBucket: "movie-suggestion-ff465.appspot.com",
+		  messagingSenderId: "171432738",
+		  appId: "1:171432738:web:1712655a2e27c2a8b2a37b",
+		  measurementId: "G-LVHKDCEGXQ"
+		};
+	  
+		// Initialize Firebase
+		const app = initializeApp(firebaseConfig);
+		const analytics = getAnalytics(app);
+	  </script>
+	<!-- Custom CSS -->
+	<style>
+		body {
+			background-color: #f8f9fa;
+			font-family: Arial, sans-serif;
+		}
+
+		.container {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+		}
+
+		h1 {
+			text-align: center;
+			margin-bottom: 40px;
+		}
+
+		.form-group {
+			margin-bottom: 20px;
+		}
+
+		.form-control {
+			border-radius: 20px;
+		}
+
+		.btn-primary {
+			background-color: #007bff;
+			border-color: #007bff;
+			border-radius: 20px;
+			transition: background-color 0.3s;
+		}
+
+		.btn-primary:hover {
+			background-color: #0069d9;
+			border-color: #0062cc;
+		}
+
+		.btn-secondary {
+			background-color: #6c757d;
+			border-color: #6c757d;
+			border-radius: 20px;
+			transition: background-color 0.3s;
+		}
+
+		.btn-secondary:hover {
+			background-color: #5a6268;
+			border-color: #545b62;
+		}
+
+		.movie {
+			margin-bottom: 40px;
+			border-radius: 10px;
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			overflow: hidden;
+		}
+
+		.movie .poster {
+			width: 100%;
+			height: auto;
+			object-fit: cover;
+		}
+
+		.movie .details {
+			padding: 20px;
+		}
+
+		.movie .title {
+			font-size: 24px;
+			margin: 0;
+			margin-bottom: 10px;
+		}
+
+		.movie .summary {
+			font-size: 16px;
+			line-height: 1.5;
+			margin: 0;
+			margin-bottom: 20px;
+		}
+
+		.movie .rating {
+			display: flex;
+			align-items: center;
+			margin-bottom: 10px;
+		}
+
+		.movie .rating input[type="range"] {
+			width: 150px;
+			margin-right: 10px;
+		}
+
+		.movie .rating input[type="range"]::-webkit-slider-runnable-track {
+			width: 100%;
+			height: 5px;
+			background-color: #ddd;
+			border-radius: 5px;
+		}
+
+		.movie .rating input[type="range"]::-webkit-slider-thumb {
+			-webkit-appearance: none;
+			width: 15px;
+			height: 15px;
+			background-color: #007bff;
+			border-radius: 50%;
+			cursor: pointer;
+		}
+
+		.movie .rating input[type="range"]:focus {
+			outline: none;
+		}
+
+		.movie .rating .rating-value {
+			font-size: 16px;
+			font-weight: bold;
+		}
+
+		.movie .comment-form {
+			margin-top: 20px;
+		}
+
+		.movie .comment-form .form-control {
+			border-radius: 20px;
+		}
+
+		.movie .comments-list {
+			margin-top: 20px;
+			padding-left: 0;
+			list-style: none;
+		}
+
+		.movie .comments-list .comment {
+			font-size: 14px;
+			line-height: 1.5;
+			margin-bottom: 5px;
+		}
+
+		.dots {
+			font-size: 24px;
+			color: #aaa;
+			cursor: pointer;
+			transition: color 0.3s;
+		}
+
+		.dots:hover {
+			color: #333;
+		}
+	</style>
 </head>
-<style>
-/* Custom CSS */
-body {
-    background-color: #f8f9fa;
-}
-
-h1, h2, h3, p, label {
-    font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
-}
-
-.container {
-    max-width: 800px;
-}
-
-#movieSuggestions {
-    display: none;
-}
-
-.movie {
-    margin-bottom: 20px;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #dee2e6;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    position: relative;
-}
-
-.poster {
-    max-width: 200px;
-    max-height: 300px;
-    margin-right: 20px;
-    float: left;
-}
-
-.title {
-    font-size: 24px;
-    margin-top: 0;
-}
-
-.summary {
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-.ratingInput {
-    width: 100px;
-    margin-right: 10px;
-}
-
-.rating {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.commentForm {
-    margin-top: 10px;
-}
-
-.commentInput {
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.commentsList {
-    list-style: none;
-    margin-top: 10px;
-    padding-left: 0;
-}
-
-.comment {
-    font-size: 14px;
-    line-height: 1.5;
-    margin-bottom: 5px;
-}
-
-.btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
-.btn-primary:hover {
-    background-color: #0069d9;
-    border-color: #0062cc;
-}
-
-.btn-secondary {
-    background-color: #6c757d;
-    border-color: #6c757d;
-}
-
-.btn-secondary:hover {
-    background-color: #5a6268;
-    border-color: #545b62;
-}
-
-.form-control:focus {
-    border-color: #007bff;
-    box-shadow: none;
-}
-
-.form-control::-webkit-input-placeholder {
-    color: #aaa;
-}
-
-.form-control::-moz-placeholder {
-    color: #aaa;
-}
-
-.form-control:-ms-input-placeholder {
-    color: #aaa;
-}
-
-.form-control::placeholder {
-    color: #aaa;
-}
-
-/* Three-dot icon */
-.movie .dots {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    font-size: 24px;
-    cursor: pointer;
-    color: #aaa;
-    transition: color 0.2s;
-}
-
-.movie:hover .dots {
-    color: #333;
-}
-
-.dots:focus {
-    outline: none;
-}
-
-.dots:before {
-    content: "\22EF";
-}
-
-.dots:hover:before {
-    color: #333;
-}
-
-.dots:before:focus {
-    outline: none;
-}
-</style>
 <body>
 	<div class="container mt-4">
 		<h1>Movie Suggestions and Ratings</h1>
@@ -161,7 +185,7 @@ h1, h2, h3, p, label {
 			<form>
 				<div class="form-group">
 					<label for="username">Enter your username:</label>
-					<input type="text" class="form-control" id="username">
+					<input type="text" class="form-control" id="username" required>
 				</div>
 				<button type="submit" class="btn btn-primary" id="loginBtn">Login</button>
 			</form>
@@ -172,14 +196,14 @@ h1, h2, h3, p, label {
 			<hr>
 			<div class="form-group">
 				<label for="movieTitle">Suggest a movie:</label>
-				<input type="text" class="form-control" id="movieTitle">
+				<input type="text" class="form-control" id="movieTitle" required>
 			</div>
 			<button type="submit" class="btn btn-primary" id="suggestBtn">Suggest</button>
 			<button type="button" class="btn btn-secondary" id="logoutBtn">Logout</button>
 		</div>
-		
 		<!-- Three-dot icon -->
 		<span class="dots">&#x22EF;</span>
+	</div>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
