--- a/index.html
+++ b/index.html
@@ -1,194 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Movie Suggestions and Ratings</title>
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-	<!-- Custom CSS -->
-	<style>
-		body {
-			background-color: #f8f9fa;
-			font-family: Arial, sans-serif;
-		}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home-Page | SOCIAL-SUGGETION</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Bootstrap CSS Link -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
+    <!-- Add these script tags before your home.js script tag -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
-		.container {
-			max-width: 800px;
-			margin: 0 auto;
-			padding: 20px;
-		}
+    <!-- Add this before your home.js script tag -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-storage.js"></script>
 
-		h1 {
-			text-align: center;
-			margin-bottom: 40px;
-		}
+    <!-- Add this line to include Firebase Realtime Database -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js" type="module"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js" type="module"></script>
 
-		.form-group {
-			margin-bottom: 20px;
-		}
-
-		.form-control {
-			border-radius: 20px;
-		}
-
-		.btn-primary {
-			background-color: #007bff;
-			border-color: #007bff;
-			border-radius: 20px;
-			transition: background-color 0.3s;
-		}
-
-		.btn-primary:hover {
-			background-color: #0069d9;
-			border-color: #0062cc;
-		}
-
-		.btn-secondary {
-			background-color: #6c757d;
-			border-color: #6c757d;
-			border-radius: 20px;
-			transition: background-color 0.3s;
-		}
-
-		.btn-secondary:hover {
-			background-color: #5a6268;
-			border-color: #545b62;
-		}
-
-		.movie {
-			margin-bottom: 40px;
-			border-radius: 10px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-			overflow: hidden;
-		}
-
-		.movie .poster {
-			width: 100%;
-			height: auto;
-			object-fit: cover;
-		}
-
-		.movie .details {
-			padding: 20px;
-		}
-
-		.movie .title {
-			font-size: 24px;
-			margin: 0;
-			margin-bottom: 10px;
-		}
-
-		.movie .summary {
-			font-size: 16px;
-			line-height: 1.5;
-			margin: 0;
-			margin-bottom: 20px;
-		}
-
-		.movie .rating {
-			display: flex;
-			align-items: center;
-			margin-bottom: 10px;
-		}
-
-		.movie .rating input[type="range"] {
-			width: 150px;
-			margin-right: 10px;
-		}
-
-		.movie .rating input[type="range"]::-webkit-slider-runnable-track {
-			width: 100%;
-			height: 5px;
-			background-color: #ddd;
-			border-radius: 5px;
-		}
-
-		.movie .rating input[type="range"]::-webkit-slider-thumb {
-			-webkit-appearance: none;
-			width: 15px;
-			height: 15px;
-			background-color: #007bff;
-			border-radius: 50%;
-			cursor: pointer;
-		}
-
-		.movie .rating input[type="range"]:focus {
-			outline: none;
-		}
-
-		.movie .rating .rating-value {
-			font-size: 16px;
-			font-weight: bold;
-		}
-
-		.movie .comment-form {
-			margin-top: 20px;
-		}
-
-		.movie .comment-form .form-control {
-			border-radius: 20px;
-		}
-
-		.movie .comments-list {
-			margin-top: 20px;
-			padding-left: 0;
-			list-style: none;
-		}
-
-		.movie .comments-list .comment {
-			font-size: 14px;
-			line-height: 1.5;
-			margin-bottom: 5px;
-		}
-
-		.dots {
-			font-size: 24px;
-			color: #aaa;
-			cursor: pointer;
-			transition: color 0.3s;
-		}
-
-		.dots:hover {
-			color: #333;
-		}
-	</style>
+    <script src="firebase-config.js"></script>
+    <script src="home.js"></script>
 </head>
-<body>
-	<div class="container mt-4">
-		<h1>Movie Suggestions and Ratings</h1>
-		<div id="loginForm">
-			<form>
-				<div class="form-group">
-					<label for="username">Enter your username:</label>
-					<input type="text" class="form-control" id="username" required>
-				</div>
-				<button type="submit" class="btn btn-primary" id="loginBtn">Login</button>
-			</form>
-		</div>
-		<div id="movieSuggestions" style="display:none">
-			<h2>Suggested Movies</h2>
-			<div id="moviesList"></div>
-			<hr>
-			<div class="form-group">
-				<label for="movieTitle">Suggest a movie:</label>
-				<input type="text" class="form-control" id="movieTitle" required>
-			</div>
-			<button type="submit" class="btn btn-primary" id="suggestBtn">Suggest</button>
-			<button type="button" class="btn btn-secondary" id="logoutBtn">Logout</button>
-		</div>
-		<!-- Three-dot icon -->
-		<span class="dots">&#x22EF;</span>
-	</div>
 
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	<!-- Bootstrap JS -->
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<!-- Custom JS -->
-	<script src="index.js"></script>
+<body>
+    <div class="container">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="messeging.html">Messaging</a></li>
+            <li><a href="settings.html">Settings</a></li>
+            <li><button id="logoutBtn">Logout</button></li>
+        </ul>
+    </nav>
+    <div class="container my-custom-container custom-styling">
+        <h1>Welcome to the SOCIAL-SUGGETION APP</h1>
+        <div id="uploadForm" class="my-custom-form custom-styling">
+            <input type="file" id="fileInput" accept="image/*, video/*">
+            <textarea id="textContent" placeholder="Enter text content"></textarea>
+            <button id="submitBtn" onclick="uploadContent()" class="btn btn-primary">Upload</button>
+        </div>
+        <div id="suggestionsList" class="my-custom-suggestions custom-styling">
+            <!-- Suggestions from other users will be dynamically added here -->
+        </div>
+    </div>
+</div>
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js" type="module"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js" type="module"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js" type="module"></script>
+  <script src="firebase-config.js" type="module"></script>
+  <script src="home.js" type="module"></script> -->
+
 </body>
+
 </html>
